# qbittorrent-agent

./: .bumpversion.cfg  .env.example  .pre-commit-config.yaml  404.html  AGENTS.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  debug.Dockerfile  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  sitemap.xml
.pre-commit-cache/: db.db
.specify/: summary.json
.specify/qbittorrent-agent/: results.json
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260522/: spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
architecture/: index.html
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: architecture.md  concepts.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  platform.md  usage.md
installation/: index.html
legacy_readme/: index.html
overview/: index.html
platform/: index.html
qbittorrent_agent/: __init__.py  __main__.py  agent_server.py  api_client.py  auth.py  graph_config.py  mcp_config.json  mcp_server.py  qbittorrent_api.py  qbittorrent_models.py  tool_tags.json
qbittorrent_agent/agent/: HEARTBEAT.md  IDENTITY.md  MCP_AGENTS.md  mcp_config.json
qbittorrent_agent/agent_data/: MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json
qbittorrent_agent/api/: __init__.py  api_client_app.py  api_client_base.py  api_client_log.py  api_client_rss.py  api_client_search.py  api_client_sync.py  api_client_torrents.py  api_client_transfer.py
qbittorrent_agent/mcp/: __init__.py  mcp_app.py  mcp_log.py  mcp_rss.py  mcp_search.py  mcp_sync.py  mcp_torrents.py  mcp_transfer.py
qbittorrent_agent/prompts/: main_agent.json
qbittorrent_agent/skills/qbittorrent-starter/: SKILL.md
scripts/: security_sanitizer.py
search/: search_index.json
tests/: conftest.py  test_action_discovery.py  test_concept_parity.py  test_coverage_api_base.py  test_coverage_api_endpoints.py  test_coverage_cli_main.py  test_coverage_mcp_server.py  test_coverage_models.py  test_init.py  test_init_dynamics.py  test_qbittorrent_agent_brute_force_coverage.py
usage/: index.html
